--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,17 +1,17 @@
 :root {
-  --yellow: #f5c32c;
-  --orange: #fca61f;
+  --yellow: skyblue;
+  --orange: lightblue;
   --black: #242d49;
   --gray: rgba(36, 45, 73, 0.65);
   --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
   --hrColor: #cfcdcd;
   --cardColor: rgba(255, 255, 255, 0.64);
-  --buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
+  --buttonBg: linear-gradient(90deg, rgba(8,56,250,1) 0%, rgba(8,56,250,1) 0%, rgba(237,13,74,1) 100%);
   --inputColor: rgba(40, 52, 62, 0.07);
   --photo: #4CB256;
   --video: #4A4EB7;
   --location: #EF5757;
---shedule: #E1AE4A;
+--shedule:rgb(186,31,102);;
 }
 
 .App {
@@ -43,8 +43,8 @@
 }
 
 .button:hover {
-  color: var(--orange);
-  border: 2px solid var(--orange);
+  color: blue;
+  border: 2px solid skyblue;
   cursor: pointer;
   background: transparent;
 }
