--- a/client/src/components/InfoCard/InfoCard.css
+++ b/client/src/components/InfoCard/InfoCard.css
@@ -2,7 +2,7 @@
 {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 1rem;
     background-color: var(--cardColor);
     padding: 1rem;
     border-radius: 1rem;
@@ -10,9 +10,19 @@
 }
 
 .infoHead{
+    margin-bottom: 1.2rem;
+    font-size: 1.3rem;
+    font-weight: 600;
     display: flex;
+font-weight: 500;
     justify-content: space-between;
     align-items: center;
+}
+.info{
+    display: flex;
+    font-size: 1.1rem;
+    align-items: center;
+    gap: 2rem;
 }
 
 .infoHead>div:hover{
@@ -22,6 +32,6 @@
 .logout-button{
     width: 7rem;
     height: 2rem;
-    margin-top: 6rem;
+    margin-top: 1.5rem;
     align-self: flex-end;
 }
