--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -6,8 +6,19 @@
     background-color: var(--cardColor);
     border-radius: 1rem;
     gap: 1rem;
+    height: 100%;
+}
+.user-details{
+    display:flex ;
+    align-items: center;
+    gap: 0.6rem;
 }
 
+.user-details img{
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+}
 .Post>img{
     width: 100%;
     max-height: 20rem;
