--- a/client/src/components/PostShare/PostShare.css
+++ b/client/src/components/PostShare/PostShare.css
@@ -1,6 +1,8 @@
 .PostShare{
     display: flex;
-    gap: 1rem;
+    align-items: center;
+    justify-content: space-around;
+  
     background-color: var(--cardColor);
     padding: 1rem;
     border-radius: 1rem;
@@ -45,7 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 12px;
+    font-size: 1.2rem;
 }
 
 .option:hover{
@@ -61,6 +63,7 @@
 
 .previewImage{
     position: relative;
+    height: 100%;
     /* display: flex; */
 }
 
@@ -72,6 +75,7 @@
 }
 
 .previewImage>img{
+    height:100%;
     width: 100%;
     max-height: 20rem;
     object-fit: cover;
