--- a/client/src/components/Post/Post.css
+++ b/client/src/components/Post/Post.css
@@ -19,10 +19,18 @@
     width: 3rem;
     height: 3rem;
 }
-.Post>img{
-    width: 100%;
-    max-height: 20rem;
-    object-fit: cover;
+
+ .Post .postImage {
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+ }
+ .postImage>img{
+   max-width: 100%;
+   height: auto;
     border-radius: 0.5rem;
 }
 
